Add Flex for Header

--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
     <title>CSS-Basic-HomeTask</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/root.css">
+    <link rel="stylesheet" href="CSS/header.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
         <div class="background-1">
-            <header>
-                <a href="#">PROJECT</a>
-                <nav>
-                <ul>
-                    <li><a href="#">PROJECT</a></li>
-                    <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">STORIES</a></li>
-                    <li><a href="#">CONTACT</a></li>
+            <header class="header">
+                <a href="#" class="title">PROJECT</a>
+                <nav class="nav-bar">
+                <ul class="nav-bar-ul">
+                    <li class="nav-bar-ul-li"><a href="#">PROJECTS</a></li>
+                    <li class="nav-bar-ul-li"><a href="#">ABOUT US</a></li>
+                    <li class="nav-bar-ul-li"><a href="#">STORIES</a></li>
+                    <li class="nav-bar-ul-li"><a href="#">CONTACT</a></li>
                 </ul>
                 </nav>
             </header>
