--- a/index.html
+++ b/index.html
@@ -30,17 +30,24 @@
             <h2 class="background-1-h2">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit sed do eiusmod.</h2>
         </div>
     <section>
-        <h2 class="main-h2">This is the Section Headline, <br> Continues to Two Lines</h2>
-        <h3 class="main-h3">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit sed do eiusmod.</h3>
-        <article class="article1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Ut enim ad minim<br> veniam, quis nostrud  exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit<br> esse cillum dolore eu fugiat nulla pariatur.  Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est <br>laborum. Sed ut perspiciatis unde
-        omnis.</article>
-        <article class="article2">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in <br>voluptate velit esse cillum  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit<br> anim id est laborum.</article>
-        <div class="button-container"><button class="rd-button">READ MORE</button></div>
+            <h2 class="main-h2">This is the Section Headline, <br> Continues to Two Lines</h2>
+            <h3 class="main-h3">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit sed do eiusmod.</h3>
+        <div class="grid-container">
+            <article class="article1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed <br>do eiusmod tempor incididunt ut labore et
+            dolore magna<br> aliqua. Ut enim ad minim veniam, quis nostrud exercitation<br>ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.<br> Duis aute irure dolor in reprehenderit in voluptate velit esse<br>cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat<br> cupidatat non proident, sunt in culpa qui officia deserunt<br> mollit anim id est laborum. Sed ut
+            perspiciatis unde
+            omnis.</article>
+            <article class="article2">Minim veniam, quis nostrud exercitation ullamco laboris nisi<br>ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in<br>reprehenderit in voluptate velit esse cillum dolore eu fugiat<br> nulla pariatur. Excepteur sint occaecat
+            cupidatat non
+            proident,<br>sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
+        </div>
+            <div class="button-container">
+                <button class="rd-button">READ MORE</button>
+            </div>
+        
     </section>
     <div class="background-2">
         <h2 class="background-2-h2">Learn more <br> about our culture...</h2>
