Add grid for footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             <div class="button-container">
                 <button class="rd-button">READ MORE</button>
             </div>
-        
     </section>
     <div class="background-2">
         <h2 class="background-2-h2">Learn more <br> about our culture...</h2>
@@ -57,11 +56,13 @@
         <h3 class="background-2-h3">Duis aute irure dolor in reprehenderit<br> in voluptate velit esse cillum dolore eu<br> fugiat nulla pariatur.</h3>
     </div>
         <footer>
-            <img src="assets/logo.png" alt="sml-logo" width="20" height="20" class="sml-logo"> 
-            <p class="footer-p1">PROJECT</p>
-            <address class="footer-address">123 Street, <br> Anytown, USA 12345 </address>
-            <a href="#" class="footer-email">hello@wesbite.com</a>
-            <p class="footer-p2">© 2021 Project. All rights reserved </p>
+            <div class="grid-footer">
+                <img src="assets/logo.png" alt="sml-logo" width="20" height="20" class="sml-logo"> 
+                <p class="footer-p1">PROJECT</p>
+                <address class="footer-address">123 Street, <br> Anytown, USA 12345 </address>
+                <a href="#" class="footer-email">hello@wesbite.com</a>
+                <p class="footer-p2">© 2021 Project. All rights reserved </p>
+            </div>
         </footer>
         </main>
 </body>
