--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <img src="assets/logo.png" alt="sml-logo" width="20" height="20" class="sml-logo"> 
                 <p class="footer-p1">PROJECT</p>
                 <address class="footer-address">123 Street, <br> Anytown, USA 12345 </address>
-                <a href="#" class="footer-email">hello@wesbite.com</a>
+                <a href="mailto:hello@wesbite.com" class="footer-email">hello@wesbite.com</a>
                 <p class="footer-p2">© 2021 Project. All rights reserved </p>
             </div>
         </footer>
