Correct button styles

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             omnis.</article>
             <article class="article2">Minim veniam, quis nostrud exercitation ullamco laboris nisi<br>ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in<br>reprehenderit in voluptate velit esse cillum dolore eu fugiat<br> nulla pariatur. Excepteur sint occaecat
-            cupidatat non
-            proident,<br>sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
+            cupidatat non proident,<br>sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
         </div>
             <div class="button-container">
                 <button class="rd-button">READ MORE</button>
